--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,11 @@ thiserror = "2"
 chrono = { version = "0.4", features = ["serde"] }
 ratatui = "0.30"
 crossterm = "0.28"
-portable-pty = "0.9"
+nix = { version = "0.29", features = ["term"] }
+libc = "0.2"
 vt100 = "0.16"
 tui-term = "0.3"
 tokio = { version = "1", features = ["full"] }
-bytes = "1"
 
 [dev-dependencies]
 tempfile = "3"
